finished first draft

--- a/Sandbox_LDA.ipynb
+++ b/Sandbox_LDA.ipynb
@@ -381,48 +381,139 @@
    "id": "efaac191-1cab-4f70-afc4-acfa443ccb66",
    "metadata": {},
    "source": [
-    "# Re do using Gensim"
+    "# Re do using NLTK + scikit-learn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "53acc684-31d4-42bd-8d93-77da8bf4d4fe",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "from nltk.tokenize import RegexpTokenizer\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.decomposition import LatentDirichletAllocation"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "e2f8d1b1-c9e0-45ab-af41-269cf1d437f7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\AT030915\\Spacy_Sent_Topic\\venv\\venv_spacy\\lib\\site-packages\\sklearn\\feature_extraction\\text.py:528: UserWarning: The parameter 'token_pattern' will not be used since 'tokenizer' is not None'\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize regex tokenizer\n",
+    "tokenizer = RegexpTokenizer(r'\\w+')\n",
+    "\n",
+    "# Vectorize document using TF-IDF\n",
+    "tfidf = TfidfVectorizer(lowercase=True,\n",
+    "                        stop_words='english',\n",
+    "                        ngram_range = (1,1),\n",
+    "                        tokenizer = tokenizer.tokenize)\n",
+    "\n",
+    "# Fit and Transform the documents\n",
+    "train_data = tfidf.fit_transform(text)   "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "dc98f956-6904-44a3-af34-73186fd61c79",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Define the number of topics or components\n",
+    "num_components=5\n",
+    "\n",
+    "# Create LDA object\n",
+    "model=LatentDirichletAllocation(n_components=num_components)\n",
+    "\n",
+    "# Fit and Transform SVD model on data\n",
+    "lda_matrix = model.fit_transform(train_data)\n",
+    "\n",
+    "# Get Components \n",
+    "lda_components=model.components_"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "140e971b-39cd-442d-9fd5-9b5505ab93be",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bffdca28-283d-48b2-a00b-1c8c47e2007f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Topic 0:\n",
+      "('br', 2.7925339140475405)\n",
+      "('s', 1.6395355774599403)\n",
+      "('movie', 1.5981602832151338)\n",
+      "('like', 1.1901579014875656)\n",
+      "('t', 1.0560177948354081)\n",
+      "('war', 1.0398044651678267)\n",
+      "('film', 0.8875702634769103)\n",
+      "Topic 1:\n",
+      "('br', 1.5704411012680493)\n",
+      "('film', 1.1010562764207426)\n",
+      "('movie', 1.100690734614989)\n",
+      "('s', 0.9238731565134715)\n",
+      "('story', 0.7519701305496012)\n",
+      "('lot', 0.7361693950857513)\n",
+      "('goldie', 0.7026728215531821)\n",
+      "Topic 2:\n",
+      "('br', 3.3391667334271573)\n",
+      "('movie', 1.813446399631298)\n",
+      "('s', 1.5199195181955698)\n",
+      "('film', 1.4350005619134318)\n",
+      "('t', 1.2154273253728212)\n",
+      "('bad', 1.0669913622951264)\n",
+      "('just', 1.0623681502038043)\n",
+      "Topic 3:\n",
+      "('br', 3.4236165316395253)\n",
+      "('s', 1.6445600576228787)\n",
+      "('movie', 1.5064319345853383)\n",
+      "('film', 1.3885580840416798)\n",
+      "('funny', 0.9957584189514619)\n",
+      "('movies', 0.8921163220874821)\n",
+      "('b', 0.8723364944151497)\n",
+      "Topic 4:\n",
+      "('br', 1.877835505737501)\n",
+      "('movie', 1.178730068353227)\n",
+      "('s', 1.0856513278401425)\n",
+      "('jimmy', 0.9137528365362999)\n",
+      "('just', 0.8674513260737451)\n",
+      "('t', 0.8629769920970198)\n",
+      "('adventure', 0.7617527343959996)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the topics with their terms\n",
+    "terms = tfidf.get_feature_names_out()\n",
+    "\n",
+    "for index, component in enumerate(lda_components):\n",
+    "    zipped = zip(terms, component)\n",
+    "    top_terms_key=sorted(zipped, key = lambda t: t[1], reverse=True)[:7]\n",
+    "    top_terms_list=list(dict(top_terms_key).keys())\n",
+    "    top_terms_comp = list(dict(top_terms_key).values())\n",
+    "\n",
+    "    print(\"Topic %d:\" % (index))\n",
+    "    [print((top_terms_list[i], top_terms_comp[i])) for i in range(len(top_terms_list))]\n",
+    "     \n"
+   ]
   },
   {
    "cell_type": "code",
